<resources>
    <string name="app_name">R(UV)Xposed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Location strings -->
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.firebase.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="enable_gps_button">Enable GPS button</string>
    <string name="launch_http_query">Launch HTTP Query</string>
    <string name="title_activity_maps">Map</string>
    <string name="position">CHECK YOUR POSITION</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="current_uv_level">Current UV level:</string>
    <string name="uv_level_description">UV level description</string>
    <string name="from">From:</string>
    <string name="be_protected_from">Be protected from</string>
    <string name="to">To:</string>
    <string name="be_protected_until">Be protected until</string>
    <string name="todays_max_uv">Todays\' max uv:</string>
    <string name="uv_max_level">UV max level</string>
    <string name="max_uv_time">Max uv time:</string>
    <string name="uv_max_level_time">UV max level time</string>
    <string name="last_update">Last update</string>

</resources>