<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".MainActivity"
    android:layout_margin="16dp">

    <ImageButton
        android:id="@+id/foreground_only_location_button"
        android:backgroundTint="@android:color/holo_purple"
        android:background="@drawable/rounded_corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/outline_place_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/enable_gps_button"/>

    <ImageButton
        android:id="@+id/launch_query_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@android:color/holo_blue_light"
        android:padding="10dp"
        android:src="@drawable/outline_refresh_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toEndOf="@+id/foreground_only_location_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/launch_http_query"/>

    <TextView
        android:id="@+id/level_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_border"
        android:fontFamily="@font/robotolight"
        android:hint="@string/uv_level_description"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_query_button" />

    <TextView
        android:id="@+id/uv_level_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/background_border"
        android:fontFamily="@font/robotolight"
        android:text="@string/current_uv_level"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_TV" />

    <TextView
        android:id="@+id/uv_level_value_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/robotolight"
        android:hint="Current UV level"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_TV" />

    <TextView
        android:id="@+id/uv_from_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_border"
        android:fontFamily="@font/robotolight"
        android:text="@string/from"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_level_TV" />

    <TextView
        android:id="@+id/uv_from_value_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:hint="@string/be_protected_from"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/robotolight"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_level_value_TV" />

    <TextView
        android:id="@+id/uv_to_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_border"
        android:fontFamily="@font/robotolight"
        android:text="@string/to"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_from_TV" />

    <TextView
        android:id="@+id/uv_to_value_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:hint="@string/be_protected_until"
        android:layout_marginTop="36dp"
        android:textAlignment="center"
        android:fontFamily="@font/robotolight"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_from_value_TV" />

    <TextView
        android:id="@+id/uv_max_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_border"
        android:fontFamily="@font/robotolight"
        android:text="@string/todays_max_uv"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_to_TV" />

    <TextView
        android:id="@+id/uv_max_value_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:hint="@string/uv_max_level"
        android:layout_marginTop="36dp"
        android:textAlignment="center"
        android:fontFamily="@font/robotolight"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_to_value_TV" />

    <TextView
        android:id="@+id/uv_max_time_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_border"
        android:fontFamily="@font/robotolight"
        android:text="@string/max_uv_time"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_max_TV" />

    <TextView
        android:id="@+id/uv_max_time_value_TV"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:hint="@string/uv_max_level_time"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/robotolight"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_max_value_TV" />

    <TextView
        android:id="@+id/last_update_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_border"
        android:fontFamily="@font/robotolight"
        android:hint="@string/last_update"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uv_max_time_value_TV" />

    <Button
        android:id="@+id/maps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_update_TV"
        app:layout_constraintVertical_bias="0.449" />


</androidx.constraintlayout.widget.ConstraintLayout>